--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
     <title>Wedding Galery</title>
   </head>
   <body>
+    <h1>WELCOME TO WEDDING ORGANIZER</h1>
     <!-- Awal Navbar />-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
