--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylehome1.css">
     <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
 
-    <title>Wedding Galery</title>
+    <title>Wedding Gallery</title>
   </head>
   <body>
     <h1>WELCOME TO WEDDING ORGANIZER</h1>
