--- a/pages/pemesanan.html
+++ b/pages/pemesanan.html
@@ -37,10 +37,10 @@
            Pilihan Paket
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Make Up (Tanpa dekorasi)</a></li>
-            <li><a class="dropdown-item" href="#">Make Up dan Dekorasi</a></li>
-            <li><a class="dropdown-item" href="#">Foto dan Videografi</a></li>
-            <li><a class="dropdown-item" href="#">Catering</a></li>
+            <li><a class="dropdown-item" href="pemesanan.html">Make Up (Tanpa dekorasi)</a></li>
+            <li><a class="dropdown-item" href="pemesanan1.html">Make Up dan Dekorasi</a></li>
+            <li><a class="dropdown-item" href="pemesanan2.html">Foto dan Videografi</a></li>
+            <li><a class="dropdown-item" href="pemesanan3.html">Catering</a></li>
           </ul>
           <li class="nav-item">
         <li class="nav-item">
