--- a/pages/galeri.html
+++ b/pages/galeri.html
@@ -8,12 +8,13 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="stylehome1.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/stylehome1.css">
     <link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="stylegaleri.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/stylegaleri.css">
+
+    <!-- <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
      <script src="js/jquery.min.js"></script>
-     <script src="js/bootstrap.min.js"></script>
+     <script src="js/bootstrap.min.js"></script> -->
 </head>
 <body>
     <!-- Awal Navbar />-->
