--- a/pages/pemesanan/pemesanan2.html
+++ b/pages/pemesanan/pemesanan2.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../style/stylePemesanan.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/stylePemesanan.css">
     <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.min.css">
 
     <title>Wedding Galery</title>
@@ -76,35 +76,35 @@
   <div class="row row-produk">
     <div class="col-lg-5">
       <figure class="figure">
-        <img src="../assets/7.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 450px;">
+        <img src="../../assets/images/pengantin/11.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 450px;">
         <figcaption class="figure-caption d-flex justify-content-evenly">
           <a href="#">
-            <img src="../assets/6.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/pengantin/11.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
           <a href="#">
-            <img src="../assets/7.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/pengantin/12.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
           <a href="#">
-            <img src="../assets/8.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/pengantin/13.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
           <a href="#">
-            <img src="../assets/9.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/pengantin/14.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
           <a href="#">
-            <img src="../assets/10.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/pengantin/15.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
 
         </figcaption>
       </figure>
     </div>
     <div class="col-lg-7">
-      <h4>Make Up dengan Dekorasi</h4>
+      <h4>Fotografi Pre-Wedding</h4>
       <div class="garis-nama"></div>
-      <h3 class="text-muted mb-3">Rp. 10.000.000</h3>
+      <h3 class="text-muted mb-3">Rp. 8.000.000</h3>
 <!-- Description-->
 <div class="row row-produk">
   <div class="col-12">
-    <div class="row row-produk">
+     <div class="row row-produk">
       <div class="col-12">
       <div class="card">
       <div class="card-header">
@@ -112,9 +112,9 @@
       </div>
       <div class="card-body">
         <blockquote class="blockquote mb-0">
-          <p> Mape Up dengan dekorasi menyediakan make up pengantin sekaligus dekorasi. Dekorasi memiliki banyak pilihan bisa di indoor maupun di outdoor. 
+          <p> Fotografi prewedding menawarkan beberapa paket seperti foto album, video film maker dan kaset dvd.
           </p>
-          <footer class="blockquote-footer">MUA <cite title="Source Title"></cite></footer>
+          <footer class="blockquote-footer">Fotografer <cite title="Source Title"></cite></footer>
         </blockquote>
         <br>
           </div>
@@ -124,7 +124,7 @@
       </div>
     </div>
       </div>
-</div></div>
+</div>
 <!--Akhir Description-->
 </div>
 <!-- Akhir Single Produk-->
