--- a/pages/pemesanan/pemesanan3.html
+++ b/pages/pemesanan/pemesanan3.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../style/stylePemesanan.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/stylePemesanan.css">
     <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.min.css">
 
     <title>Wedding Galery</title>
@@ -76,22 +76,22 @@
   <div class="row row-produk">
     <div class="col-lg-5">
       <figure class="figure">
-        <img src="../assets/16.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 450px;">
+        <img src="../../assets/images/prasmanan/16.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 450px;">
         <figcaption class="figure-caption d-flex justify-content-evenly">
           <a href="#">
-            <img src="../assets/17.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/prasmanan/17.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
           <a href="#">
-            <img src="../assets/18.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/prasmanan/18.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
           <a href="#">
-            <img src="../assets/19.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/prasmanan/19.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
           <a href="#">
-            <img src="../assets/20.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/prasmanan/20.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
           <a href="#">
-            <img src="../assets/16.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
+            <img src="../../assets/images/prasmanan/16.jpg" class="figure-img img-fluid" style="border-radius: 5px; width: 70px;">
           </a>
 
         </figcaption>
