--- a/pages/pemesanan/pemesanan.html
+++ b/pages/pemesanan/pemesanan.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="../../assets/css/stylePemesanan.css">
     <link rel="stylesheet" type="text/css" href="../fontawesome/css/all.min.css">
 
@@ -37,22 +38,24 @@
            Pilihan Paket
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="pages/pemesanan.html">Make Up (Tanpa dekorasi)</a></li>
-            <li><a class="dropdown-item" href="pages/pemesanan1.html">Make Up dan Dekorasi</a></li>
-            <li><a class="dropdown-item" href="pages/pemesanan2.html">Foto dan Videografi</a></li>
-            <li><a class="dropdown-item" href="pages.pemesanan3.html">Catering</a></li>
+            <li><a class="dropdown-item" href="pemesanan.html">Make Up (Tanpa dekorasi)</a></li>
+            <li><a class="dropdown-item" href="pemesanan1.html">Make Up dan Dekorasi</a></li>
+            <li><a class="dropdown-item" href="pemesanan2.html">Foto dan Videografi</a></li>
+            <li><a class="dropdown-item" href="pemesanan3.html">Catering</a></li>
           </ul>
-          <li class="nav-item">
+        </li>
+
         <li class="nav-item">
           <a class="nav-link" href="#">Galeri</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Tentang Kami</a>
         </li>
-        
+        <li class="nav-item">
           <a class="nav-link" href="#">Narahubung</a>
         </li>
-        </li>
+
+
       </ul>
     </div>
   </div>
@@ -227,3 +230,6 @@
 </div>
 </footer>
 <!-- Akhir footer -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+</html>
