--- a/pages/pemesanan/pemesanan1.html
+++ b/pages/pemesanan/pemesanan1.html
@@ -37,10 +37,10 @@
            Pilihan Paket
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Make Up (Tanpa dekorasi)</a></li>
-            <li><a class="dropdown-item" href="#">Make Up dan Dekorasi</a></li>
-            <li><a class="dropdown-item" href="#">Foto dan Videografi</a></li>
-            <li><a class="dropdown-item" href="#">Catering</a></li>
+            <li><a class="dropdown-item" href="pemesanan.html">Make Up (Tanpa dekorasi)</a></li>
+            <li><a class="dropdown-item" href="pemesanan1.html">Make Up dan Dekorasi</a></li>
+            <li><a class="dropdown-item" href="pemesanan2.html">Foto dan Videografi</a></li>
+            <li><a class="dropdown-item" href="pemesanan3.html">Catering</a></li>
           </ul>
           <li class="nav-item">
         <li class="nav-item">
@@ -230,5 +230,6 @@
 </div>
 </footer>
 <!-- Akhir footer -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
